RESOLVED FIXED83844
Chromium: Fix scrollbar tickmark drawing on Mountain Lion
https://bugs.webkit.org/show_bug.cgi?id=83844
Summary Chromium: Fix scrollbar tickmark drawing on Mountain Lion
Sailesh Agrawal
Reported 2012-04-12 18:19:07 PDT
Chromium: Fix scrollbar tickmark drawing on Mountain Lion
Attachments
Patch (3.48 KB, patch)
2012-04-12 18:25 PDT, Sailesh Agrawal
no flags
Sailesh Agrawal
Comment 1 2012-04-12 18:25:47 PDT
Nico Weber
Comment 2 2012-04-12 18:34:25 PDT
Comment on attachment 137015 [details] Patch lgtm
James Robinson
Comment 3 2012-04-12 19:48:58 PDT
Comment on attachment 137015 [details] Patch Okiedokie then
WebKit Review Bot
Comment 4 2012-04-12 23:15:16 PDT
Comment on attachment 137015 [details] Patch Clearing flags on attachment: 137015 Committed r114088: <http://trac.webkit.org/changeset/114088>
WebKit Review Bot
Comment 5 2012-04-12 23:15:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.